--- a/index.html
+++ b/index.html
@@ -82,16 +82,37 @@
         <i class="bi bi-geo-alt-fill me-1"></i> Bristol, United Kingdom
       </p>
 
-      <div class="text-start ms-3">
-        <p><i class="bi bi-link-45deg me-2"></i><a href="#">Website</a></p>
-        <p><i class="bi bi-envelope-fill me-2"></i><a href="#">Email</a></p>
-        <p><i class="bi bi-twitter me-2"></i><a href="#">Twitter</a></p>
-        <p><i class="bi bi-linkedin me-2"></i><a href="#">LinkedIn</a></p>
-        <p><i class="bi bi-instagram me-2"></i><a href="#">Instagram</a></p>
-        <p><i class="bi bi-github me-2"></i><a href="#">GitHub</a></p>
-        <p><i class="bi bi-stack-overflow me-2"></i><a href="#">Stack Overflow</a></p>
-        <p><i class="bi bi-youtube me-2"></i><a href="#">YouTube</a></p>
+      <div class="text-start">
+        <div class="d-flex align-items-center mb-2">
+          <i class="bi bi-link-45deg me-2"></i>
+          <a href="#">Website</a>
+        </div>
+        <div class="d-flex align-items-center mb-2">
+          <i class="bi bi-envelope-fill me-2"></i>
+          <a href="#">Email</a>
+        </div>
+        <div class="d-flex align-items-center mb-2">
+          <i class="bi bi-twitter me-2"></i>
+          <a href="#">Twitter</a>
+        </div>
+        <div class="d-flex align-items-center mb-2">
+          <i class="bi bi-linkedin me-2"></i>
+          <a href="#">LinkedIn</a>
+        </div>
+        <div class="d-flex align-items-center mb-2">
+          <i class="bi bi-instagram me-2"></i>
+          <a href="#">Instagram</a>
+        </div>
+        <div class="d-flex align-items-center mb-2">
+          <i class="bi bi-github me-2"></i>
+          <a href="#">GitHub</a>
+        </div>
+        <div class="d-flex align-items-center mb-2">
+          <i class="bi bi-stack-overflow me-2"></i>
+          <a href="#">Stack Overflow</a>
+        </div>
       </div>
+      
 
       <div class="mt-4 text-start">
         <p class="fw-bold">Get notified of new posts!</p>
