--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     .sidebar a {
       white-space: nowrap;
     }
+    .sidebar {
+      transition: all 0.3s ease;
+    }
 
   </style>
 </head>
@@ -63,6 +66,9 @@
     <a class="navbar-brand fs-4" href="#">Pulkit's Blog</a>
 
     <div class="ms-auto d-flex align-items-center">
+        <button id="toggle-sidebar" class="btn btn-outline-secondary me-3">
+            <i class="bi bi-layout-sidebar-inset"></i>
+          </button>        
       <a class="nav-link me-3" href="#" id="about-link">About</a>
       <a class="nav-link me-3" href="#" id="home-link">Home</a>
       <form class="d-flex" role="search">
@@ -77,7 +83,7 @@
   <!-- Sidebar + Main Content -->
   <div class="d-flex min-vh-100 content-wrapper">
     <!-- Sidebar -->
-    <div class="sidebar text-center">
+    <div class="sidebar text-center" id="sidebar">
       <img src="https://via.placeholder.com/120" class="rounded-circle mb-3 profile" alt="Profile" />
       <h4 class="fw-bold">Pulkit Dhingra</h4>
       <p class="text-muted small">
@@ -86,7 +92,7 @@
       <p class="text-muted">
         <i class="bi bi-geo-alt-fill me-1"></i> Bristol, United Kingdom
       </p>
-
+  
       <div class="text-start">
         <div class="d-flex align-items-center mb-2">
           <i class="bi bi-link-45deg me-2"></i>
@@ -117,13 +123,14 @@
           <a href="#">Stack Overflow</a>
         </div>
       </div>
-      
-
+  
       <div class="mt-4 text-start">
         <p class="fw-bold">Get notified of new posts!</p>
         <input type="email" class="form-control" placeholder="email address" />
       </div>
     </div>
+
+    
 
     <!-- Main Content -->
     <div class="flex-grow-1 p-4" id="main-content">
@@ -282,6 +289,42 @@
         });
       });
     }
+
+  </script>
+
+  
+
+
+  <script>
+    // === SIDEBAR TOGGLE LOGIC ===
+
+const toggleBtn = document.getElementById("toggle-sidebar");
+const sidebar = document.getElementById("sidebar");
+
+// Toggle the sidebar on button click
+function toggleSidebar() {
+  sidebar.classList.toggle("d-none");
+
+  // Highlight the button when sidebar is hidden
+  if (sidebar.classList.contains("d-none")) {
+    toggleBtn.classList.add("btn-warning");
+  } else {
+    toggleBtn.classList.remove("btn-warning");
+  }
+}
+
+toggleBtn.addEventListener("click", toggleSidebar);
+
+// Auto-hide on small screens on initial load
+function handleInitialSidebar() {
+  if (window.innerWidth < 768) {
+    sidebar.classList.add("d-none");
+    toggleBtn.classList.add("btn-warning");
+  }
+}
+
+window.addEventListener("DOMContentLoaded", handleInitialSidebar);
+
   </script>
   
 
