--- a/index.html
+++ b/index.html
@@ -62,10 +62,19 @@
         100% { opacity: 1; }
         }
 
-        .blink {
+    .blink {
         animation: blink 1.5s infinite;
         border-color: #ffc107;
         color: #ffc107;
+        }
+    .content-wrapper {
+        padding-top: 70px; /* default for large screens */
+        }
+
+        @media (max-width: 767px) {
+        .content-wrapper {
+            padding-top: 100px; /* more space on small screens */
+        }
         }
 
 
@@ -76,11 +85,11 @@
   <!-- Fixed Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light px-4 fixed-top">
     <a class="navbar-brand fs-4" href="#">Pulkit's Blog</a>
-
+    <button id="toggle-sidebar" class="btn btn-outline-secondary me-3">
+        <i class="bi bi-layout-sidebar-inset"></i>
+      </button>   
     <div class="ms-auto d-flex align-items-center">
-        <button id="toggle-sidebar" class="btn btn-outline-secondary me-3">
-            <i class="bi bi-layout-sidebar-inset"></i>
-          </button>        
+             
       <a class="nav-link me-3" href="#" id="about-link">About</a>
       <a class="nav-link me-3" href="#" id="home-link">Home</a>
       <form class="d-flex" role="search">
