--- a/index.html
+++ b/index.html
@@ -84,12 +84,14 @@
 
   <!-- Fixed Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light px-4 fixed-top">
-    <a class="navbar-brand fs-4" href="#">Pulkit's Blog</a>
-    <button id="toggle-sidebar" class="btn btn-outline-secondary me-3">
+    <div class="d-flex align-items-center">
+      <a class="navbar-brand fs-4 me-2" href="#">Pulkit's Blog</a>
+      <button id="toggle-sidebar" class="btn btn-outline-secondary">
         <i class="bi bi-layout-sidebar-inset"></i>
-      </button>   
+      </button>
+    </div>
+  
     <div class="ms-auto d-flex align-items-center">
-             
       <a class="nav-link me-3" href="#" id="about-link">About</a>
       <a class="nav-link me-3" href="#" id="home-link">Home</a>
       <form class="d-flex" role="search">
@@ -100,6 +102,7 @@
       </form>
     </div>
   </nav>
+  
 
   <!-- Sidebar + Main Content -->
   <div class="d-flex min-vh-100 content-wrapper">
