--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     let cachedBlogData = [];
 
     function renderBlogList(data) {
-      let html = "<h2>Latest Posts</h2>";
+      let html = "<h2>&nbsp;&nbsp;Latest Posts</h2>";
       if (data.length === 0) {
         html += "<p>No results found.</p>";
       } else {
