--- a/content/About.html
+++ b/content/About.html
@@ -1,2 +1,40 @@
-<h2>About Me</h2>
-<p>Hello! I'm Pulkit — a developer passionate about code, languages, and mechanical keyboards!</p>
+<div class="container py-5">
+    <div class="text-center mb-4">
+      <h1 class="fw-bold">👋 Hi, I'm Pulkit Dhingra</h1>
+      <p class="text-muted">AI enthusiast | Blogger | Engineer | Curious Human</p>
+    </div>
+  
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <p>
+          I'm a passionate technologist with a love for exploring how data, algorithms, and creativity intersect. My interests span across machine learning, generative AI, and robotics — and I believe in the power of open knowledge and collaborative learning.
+        </p>
+  
+        <p>
+          By day, I dive into projects involving <strong>AI, computer vision, and automation</strong>. By night, I'm either sketching wild ideas, hacking together models, or writing about my tech adventures.
+        </p>
+  
+        <p>
+          This blog is my digital playground — where I share everything from tutorials and research insights to side projects and code breakdowns. Whether you're a fellow developer, student, or just AI-curious, I hope you find something valuable here.
+        </p>
+  
+        <hr />
+  
+        <h4 class="mt-4">🎯 Mission</h4>
+        <p>
+          To simplify complex concepts in AI and tech, and share the joy of building cool things. I want to empower learners and makers with resources and motivation.
+        </p>
+  
+        <h4 class="mt-4">📍 Location</h4>
+        <p>Bristol, United Kingdom</p>
+  
+        <h4 class="mt-4">🔗 Let's Connect</h4>
+        <ul>
+          <li><a href="https://github.com/yourusername" target="_blank">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></li>
+          <li><a href="mailto:you@example.com">Email Me</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  
