updating Aboutme.html

--- a/content/About.html
+++ b/content/About.html
@@ -7,11 +7,11 @@
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <p>
-          I'm a passionate technologist with a love for exploring how data, algorithms, and creativity intersect. My interests span across machine learning, generative AI, and robotics — and I believe in the power of open knowledge and collaborative learning.
+          I'm a passionate technologist with a love for exploring how data, algorithms, and creativity intersect. My interests span across machine learning, generative AI, and Software Development — and I believe in the power of open knowledge and collaborative learning.
         </p>
   
         <p>
-          By day, I dive into projects involving <strong>AI, computer vision, and automation</strong>. By night, I'm either sketching wild ideas, hacking together models, or writing about my tech adventures.
+          By day, I dive into projects involving <strong>AI,NLP (LLMs), computer vision, and automation</strong>. By night, I'm either sketching wild ideas, hacking together models, or writing about my tech adventures.
         </p>
   
         <p>
@@ -30,9 +30,9 @@
   
         <h4 class="mt-4">🔗 Let's Connect</h4>
         <ul>
-          <li><a href="https://github.com/yourusername" target="_blank">GitHub</a></li>
-          <li><a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></li>
-          <li><a href="mailto:you@example.com">Email Me</a></li>
+          <li><a href="https://github.com/Pulkit12dhingra" target="_blank">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/pulkit-dhingra-4b7312193/" target="_blank">LinkedIn</a></li>
+          <li><a href="mailto:pulkit12dhingra@gmail.com">Email Me</a></li>
         </ul>
       </div>
     </div>
