updating Aboutme.html

--- a/content/Blog_1.html
+++ b/content/Blog_1.html
@@ -1,2 +1,35 @@
-<h2>This is blog post 1</h2>
-<p>Hello! I'm Pulkit — a developer passionate about code, languages, and mechanical keyboards!</p>
+<div class="container mt-4">
+    <h2 class="fw-bold mb-3">Hello World! 🚀 — My First Blog Post</h2>
+    <p class="text-muted">Published: <span id="publish-date">April 14, 2025</span></p>
+    <hr />
+  
+    <p>
+      Let's start with something familiar:
+    </p>
+  
+    <pre class="bg-light p-3 rounded">
+  <code>print("Hello, World!")</code>
+    </pre>
+  
+    <p>
+      If you've ever written your first line of code, you probably recognize the line above. It's the traditional starting point — the digital equivalent of introducing yourself to the terminal and saying, “Hey, I'm here!” 🙋‍♂️
+    </p>
+  
+    <p>
+      Today, I’m doing the same — not in a terminal, but right here in this blog. After many lines of HTML, CSS, JavaScript (and yes, plenty of coffee ☕), this blog is finally live!
+    </p>
+  
+    <p>
+      This space is my corner of the internet where I’ll share thoughts, projects, bugs, breakthroughs, and brain dumps — especially around <strong>coding, software development, AI, and data science</strong>. Whether it’s diving into a tutorial or reflecting on a weird bug I fought for hours, it’ll all live here.
+    </p>
+  
+    <p>
+      So to anyone reading: welcome! 🎉 Whether you're new to code or a seasoned dev, I hope this blog brings something useful, fun, or just relatable.
+    </p>
+  
+    <p class="fw-bold">
+      Just like every program starts with a “Hello, World!”, every journey begins with a first step.
+      This is mine — and I can’t wait to see where it goes. 🙌
+    </p>
+  </div>
+  
