--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         <i class="bi bi-geo-alt-fill me-1"></i> Bristol, United Kingdom
       </p>
       <div class="text-start">
+        <div class="d-flex align-items-center mb-2">
+          <i class="bi bi-envelope-fill me-2"></i>
+          <a href="mailto:pulkit12dhingra@gmail.com" target="_blank">Email</a>
+        </div>
+        
         <div class="d-flex align-items-center mb-2"><i class="bi bi-link-45deg me-2"></i><a target="_blank" href="https://pulkit12dhingra.github.io/portfolio/">Website</a></div>
         <div class="d-flex align-items-center mb-2">
             <i class="fab fa-kaggle me-2"></i>
@@ -99,22 +104,7 @@
       </div>
 
       <div class="mt-4 text-start">
-  <p class="fw-bold">Let's Connect 🤗</p>
-  <form action="mailto:youremail@example.com" method="POST" enctype="text/plain">
-    <div class="mb-2">
-      <input type="text" class="form-control" name="name" placeholder="Your name" required />
-    </div>
-    <div class="mb-2">
-      <input type="email" class="form-control" name="email" placeholder="Your email" required />
-    </div>
-    <div class="mb-2">
-      <textarea class="form-control" name="message" rows="3" placeholder="Your message..." required></textarea>
-    </div>
-    <button type="submit" class="btn btn-outline-primary w-100">
-      Send Message
-    </button>
-  </form>
-</div>
+ 
 
     </div>
 
