--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pulkit's Blog</title>
+  <title>Byte-Sized-Brilliance-AI</title>
 
   <!-- Bootstrap CSS -->
   <link
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-expand-lg custom-navbar px-3 fixed-top">
     <div class="container-fluid">
       <div class="d-flex align-items-center">
-        <a class="navbar-brand fs-4 me-2 text-white" href="#">Pulkit's Blog</a>
+        <a class="navbar-brand fs-4 me-2 text-white" href="#">Byte-Sized-Brilliance-AI</a>
         <button id="toggle-sidebar" class="btn btn-outline-light me-2">
           <i class="bi bi-layout-sidebar-inset"></i>
         </button>
@@ -106,7 +106,7 @@
       <div class="mt-4 text-start">
   <p class="fw-bold">Let's Connect 🤗</p>
   
-</div>
+    </div>
 
     </div>
 
