--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <title>Byte-Sized-Brilliance-AI</title>
   <link rel="icon" type="image/png" href="img/icon.png" />
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="Pulkit's Blog" />
+  <meta property="og:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
+  <meta property="og:image" content="img/social-preview.png" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pulkit's Blog" />
+  <meta name="twitter:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
+  <meta name="twitter:image" content="img/social-preview.png" />
+  
+  
 
   <!-- Bootstrap CSS -->
   <link
