--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Pulkit's Blog" />
   <meta property="og:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
-  <meta property="og:image" content="img/social-preview.png" />
-  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:image" content="img/social-preview.jpg" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Pulkit's Blog" />
   <meta name="twitter:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
-  <meta name="twitter:image" content="img/social-preview.png" />
+  <meta name="twitter:image" content="img/social-preview.jpg" />
   
   
 
