Adding video to Blog2

--- a/content/Blog_2.html
+++ b/content/Blog_2.html
@@ -2,7 +2,17 @@
     <h2 class="fw-bold mb-3">Setting Up Your Python Environment 🐍</h2>
     <p class="text-muted">Published: <span id="publish-date">April 14, 2025</span></p>
     <hr />
-  
+      <!-- Embedded YouTube Video -->
+  <div class="mb-4 text-center">
+    <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/pOtRiOj1TMQ?si=Cl5eZVYOF6b4N0gZ"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen>
+    </iframe>
+  </div>
     <p>
       One of the most important first steps for any Python project is setting up a clean and manageable environment. Whether you're building a web app, training a machine learning model, or just experimenting — having the right setup saves you from a ton of headaches later.
     </p>
