--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <nav class="navbar navbar-expand-lg custom-navbar px-3 fixed-top">
     <div class="container-fluid">
       <div class="d-flex align-items-center">
-        <a class="navbar-brand fs-4 me-2 text-white" href="#">Byte-Sized-Brilliance-AI</a>
+        <a class="navbar-brand fs-4 me-2 text-white" href="https://pulkit12dhingra.github.io/Blog/">Byte-Sized-Brilliance-AI</a>
         <button id="toggle-sidebar" class="btn btn-outline-light me-2">
           <i class="bi bi-layout-sidebar-inset"></i>
         </button>
