--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     rel="stylesheet"
   />
 
-  <link rel="stylesheet" href="data/style.css" />
+  <link rel="stylesheet" href="data/style.css?v=1.0.0" />
   <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   rel="stylesheet"
